@@ -19,7 +19,7 @@
  * along with the jEdit program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
  *
- * $Id: Hex_Convert.bsh,v 1.2 2003/12/20 06:32:53 spestov Exp $
+ * $Id: Hex_Convert.bsh,v 1.3 2004/03/20 06:08:49 spestov Exp $
  */
 
 import java.io.*;
@@ -86,7 +86,8 @@ void byteToString(String target)
 }
 
 String target = Macros.input(view,"Byte to String:");
-byteToString(target);
+if(target != null)
+	byteToString(target);
 
 
 /*
